--- a/HedgeModManager/UI/OptionsWindow.xaml
+++ b/HedgeModManager/UI/OptionsWindow.xaml
@@ -13,7 +13,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="40"/>
         </Grid.RowDefinitions>
-        <TextBlock x:Name="Header" Text="HEADER" FontSize="30" Foreground="#0066CC" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <TextBlock x:Name="Header" Text="HEADER" FontSize="30" Foreground="{DynamicResource HMM.Window.HeaderAccentBrush}" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <StackPanel x:Name="CheckStack" Grid.Row="1" VerticalAlignment="Center" Margin="5,0,5,0" Width="Auto" Height="Auto"/>
         <TextBlock x:Name="ErrorLabel" Text="{StaticResource OptionsWindowUIError}"  Grid.Row="2" VerticalAlignment="Center" FontSize="12" Margin="5,0,0,0" Foreground="Red" Visibility="Hidden"/>
         <StackPanel x:Name="Stack" Orientation="Horizontal" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Stretch">
