--- a/HedgeModManager/HedgeApp.xaml
+++ b/HedgeModManager/HedgeApp.xaml
@@ -134,13 +134,32 @@
                                     <Label Content="{TemplateBinding Title}" Height="33" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="32,0,0,0" Foreground="#E9E9E9"/>
                                     <StackPanel Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Right" WindowChrome.IsHitTestVisibleInChrome="True">
                                         <Button x:Name="MinBtn" Style="{DynamicResource WindowFrameButton}" Click="Minimize_Click">
-                                            <Image Width="25" Height="25" Source="Resources/Graphics/IMG_FRAME_M.png"/>
+                                            <Grid Width="25" Height="25">
+                                                <Image x:Name="MinBtnImage" Source="Resources/Graphics/IMG_FRAME_M.png"/>
+                                                <Rectangle Fill="{DynamicResource HMM.Button.ForegroundBrush}">
+                                                    <Rectangle.OpacityMask>
+                                                        <ImageBrush ImageSource="{Binding ElementName=MinBtnImage, Path=Source}"/>
+                                                    </Rectangle.OpacityMask>
+                                                </Rectangle>
+                                            </Grid>
                                         </Button>
                                         <Button x:Name="MaxBtn" Style="{DynamicResource WindowFrameButton}" Click="MaxBtn_Click">
-                                            <Image Width="25" Height="25" Source="Resources/Graphics/IMG_FRAME_MM.png"/>
+                                            <Grid Width="25" Height="25">
+                                                <Image x:Name="MaxBtnImage" Source="Resources/Graphics/IMG_FRAME_MM.png"/>
+                                                <Rectangle Fill="{DynamicResource HMM.Button.ForegroundBrush}">
+                                                    <Rectangle.OpacityMask>
+                                                        <ImageBrush ImageSource="{Binding ElementName=MaxBtnImage, Path=Source}"/>
+                                                    </Rectangle.OpacityMask>
+                                                </Rectangle>
+                                            </Grid>
                                         </Button>
                                         <Button x:Name="CloseBtn" Style="{DynamicResource WindowFrameButton}" Click="Close_Click">
-                                            <Image Width="35" Height="25" Source="Resources/Graphics/IMG_FRAME_C.png"/>
+                                            <Border Background="{DynamicResource HMM.Button.ForegroundBrush}" Width="30" Height="25">
+                                                <Image x:Name="CloseBtnImage" Source="Resources/Graphics/IMG_FRAME_C.png" Opacity="0"/>
+                                                <Border.OpacityMask>
+                                                    <ImageBrush ImageSource="{Binding ElementName=CloseBtnImage, Path=Source}"/>
+                                                </Border.OpacityMask>
+                                            </Border>
                                         </Button>
                                     </StackPanel>
                                     <Grid Margin="4" Grid.Row="1" Background="{DynamicResource HMM.Window.BackgroundBrush}" Panel.ZIndex="1">
@@ -225,18 +244,18 @@
             <Style TargetType="{x:Type TextBox}">
                 <Setter Property="Foreground" Value="{DynamicResource HMM.Window.ForegroundBrush}"/>
                 <Setter Property="Background" Value="{DynamicResource HMM.Window.BackgroundBrush1}"/>
-                <Setter Property="BorderBrush" Value="#FF434346" />
+                <Setter Property="BorderBrush" Value="{DynamicResource HMM.Window.BorderBrush}" />
             </Style>
 
             <Style TargetType="{x:Type pt:TextBoxEx}">
                 <Setter Property="Foreground" Value="{DynamicResource HMM.Window.ForegroundBrush}"/>
                 <Setter Property="Background" Value="{DynamicResource HMM.Window.BackgroundBrush1}"/>
-                <Setter Property="BorderBrush" Value="#FF434346" />
+                <Setter Property="BorderBrush" Value="{DynamicResource HMM.Window.BorderBrush}" />
             </Style>
 
             <!-- Tabs -->
             <Style TargetType="{x:Type TabControl}">
-                <Setter Property="BorderBrush" Value="#FF3F3F46" />
+                <Setter Property="BorderBrush" Value="{DynamicResource HMM.Window.BorderBrush}" />
                 <EventSetter Event="Selector.SelectionChanged" Handler="TabControl_SelectionChanged"/>
                 <Setter Property="Template">
                     <Setter.Value>
@@ -260,7 +279,7 @@
             </Style>
             <Style TargetType="{x:Type GroupBox}">
                 <Setter Property="Background" Value="{DynamicResource HMM.Window.AccentBrush1}"/>
-                <Setter Property="Foreground" Value="#FFFFFFFF"/>
+                <Setter Property="Foreground" Value="{DynamicResource HMM.Window.ForegroundBrush}"/>
                 <Setter Property="MinHeight"             Value="20px" />
                 <Setter Property="MinWidth"              Value="20px" />
                 <Setter Property="Template">
@@ -328,15 +347,14 @@
                         <ControlTemplate TargetType="{x:Type TabItem}">
                             <Border BorderBrush="Transparent" Width="{TemplateBinding Width}" 
                                     Background="{TemplateBinding Background}" Padding="{TemplateBinding Padding}">
-                                <!--<ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" ContentSource="Header" />-->
-                                <TextBlock Text="{TemplateBinding Header}" Foreground="{TemplateBinding Foreground}"></TextBlock>
+                                <TextBlock Text="{TemplateBinding Header}" Foreground="{TemplateBinding Foreground}"/>
                             </Border>
                             <ControlTemplate.Triggers>
                                 <Trigger Property="IsSelected" Value="True">
                                     <Setter Property="Background" Value="{DynamicResource HMM.Window.AccentBrush1}" />
                                     <Setter Property="Foreground" Value="{DynamicResource HMM.Window.AccentForegroundBrush}" />
                                 </Trigger>
-                                <Trigger Property="IsMouseOver" Value="True">
+                                <Trigger Property="IsMouseDirectlyOver" Value="True">
                                     <Setter Property="Background" Value="{DynamicResource HMM.Window.AccentBrush3}"/>
                                 </Trigger>
                                 <MultiTrigger>
@@ -360,7 +378,7 @@
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type Button}">
-                            <Border TextBlock.Foreground="White"
+                            <Border TextBlock.Foreground="{DynamicResource HMM.window.Fo}"
                         x:Name="Border"
                         BorderBrush="{TemplateBinding Foreground}"
                         BorderThickness=".2"
@@ -410,7 +428,7 @@
                                                 </ColorAnimationUsingKeyFrames>
                                                 <ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(TextBlock.Foreground).(SolidColorBrush.Color)"
                               Storyboard.TargetName="Border">
-                                                    <EasingColorKeyFrame KeyTime="0" Value="White" />
+                                                    <EasingColorKeyFrame KeyTime="0" Value="{DynamicResource HMM.Button.FocusColor}" />
                                                 </ColorAnimationUsingKeyFrames>
                                             </Storyboard>
                                         </VisualState>
@@ -440,8 +458,8 @@
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type GridViewColumnHeader}">
-                            <Border BorderThickness="0,0,0,1" BorderBrush="#3F3F46">
-                                <Grid Background="{TemplateBinding Background}" Margin="-2,0,0,0" MinWidth="{TemplateBinding MinWidth}">
+                            <Border BorderThickness="0,0,0,1" BorderBrush="{DynamicResource HMM.Window.BorderBrush}">
+                                <Grid Background="{TemplateBinding Background}" MinWidth="{TemplateBinding MinWidth}">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="*"/>
                                         <ColumnDefinition Width="2"/>
@@ -463,7 +481,7 @@
                         <Setter Property="Template">
                             <Setter.Value>
                                 <ControlTemplate TargetType="GridViewColumnHeader">
-                                    <Border Background="{TemplateBinding Background}" Margin="0,0,-2,0" BorderThickness="0,0,0,1" BorderBrush="#3F3F46"/>
+                                    <Border Background="{TemplateBinding Background}" Margin="0,0,-2,0" BorderThickness="0,0,0,1" BorderBrush="{DynamicResource HMM.Window.BorderBrush}"/>
                                 </ControlTemplate>
                             </Setter.Value>
                         </Setter>
@@ -499,7 +517,7 @@
             <Style TargetType="{x:Type Thumb}">
                 <Setter Property="Width"
                       Value="2" />
-                <Setter Property="Background" Value="Gray"/>
+                <Setter Property="Background" Value="{DynamicResource HMM.Window.BorderBrush}"/>
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type Thumb}">
@@ -744,7 +762,7 @@
                                          Margin="2,0,25,0" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"/>-->
                                 <Popup x:Name="PART_Popup" AllowsTransparency="True" Placement="Bottom" IsOpen="{TemplateBinding IsDropDownOpen}" PopupAnimation="Fade">
                                     <Border BorderThickness="1" MinWidth="{TemplateBinding ActualWidth}" MaxHeight="{TemplateBinding MaxDropDownHeight}"
-                                            Background="{DynamicResource HMM.Window.BackgroundBrush}" BorderBrush="Gray" CornerRadius="2">
+                                            Background="{DynamicResource HMM.Window.BackgroundBrush}" BorderBrush="{DynamicResource HMM.Window.BorderBrush}" CornerRadius="2">
                                         <ScrollViewer>
                                             <StackPanel IsItemsHost="True" KeyboardNavigation.DirectionalNavigation="Contained" Margin="0,5,0,5"/>
                                         </ScrollViewer>
@@ -1131,6 +1149,7 @@
                     </Setter.Value>
                 </Setter>
             </Style>
+
             <Style TargetType="{x:Type pt:DataGrid}">
                 <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
                 <Setter Property="Focusable" Value="True"/>
@@ -1207,6 +1226,7 @@
                     </Setter.Value>
                 </Setter>
             </Style>
+
             <Style TargetType="{x:Type pt:PropertyGrid}">
                 <Setter Property="Focusable" Value="False"/>
                 <Setter Property="ValidationErrorStyle">
