--- a/HedgeModManager/UI/DownloadWindow.xaml
+++ b/HedgeModManager/UI/DownloadWindow.xaml
@@ -15,7 +15,7 @@
             <RowDefinition Height="40"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
-        <TextBlock x:Name="Header" Text="Header" FontSize="30" Foreground="#0066CC" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.Row="0" Margin="20,0,20,0"/>
+        <TextBlock x:Name="Header" Text="Header" FontSize="30" Foreground="{DynamicResource HMM.Window.HeaderAccentBrush}" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.Row="0" Margin="20,0,20,0"/>
         <ProgressBar x:Name="Progress" Grid.Row="1" Margin="15"/>
     </Grid>
 </Window>
