--- a/HedgeModManager/UI/ModConfigWindow.xaml
+++ b/HedgeModManager/UI/ModConfigWindow.xaml
@@ -26,7 +26,7 @@
                 <DockPanel Margin="15,0,5,0">
                     <TextBlock DockPanel.Dock="Top" Text="{DynamicResource ModsUIModDescription}"/>
 
-                    <TextBox x:Name="DescriptionBx" Foreground="#929292" IsReadOnly="True" Margin="0,10" TextWrapping="Wrap"
+                    <TextBox x:Name="DescriptionBx" Foreground="{DynamicResource HMM.Menu.DisabledTextColor}" IsReadOnly="True" Margin="0,10" TextWrapping="Wrap"
                              HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto"/>
                 </DockPanel>
             </Border>
